# IA-Topics

./: .gitignore  README.md
greedy_algorithm/: Item.cpp  Item.h  README.MD  README.md  greedy.cpp
tabu_search/: README.md
tabu_search/src/libs/: Graph.hpp  Vertex.hpp
tabu_search/tests/: CMakeLists.txt  tests.cpp
tabu_search/tests/graph/: graph.cpp  vertex.cpp
